Trying a different makefile

--- a/hello-driver/Makefile
+++ b/hello-driver/Makefile
@@ -1,17 +1,21 @@
-# Makefile – makefile of our first driver
- 
-# if KERNELRELEASE is defined, we've been invoked from the
-# kernel build system and can use its language.
-ifneq (${KERNELRELEASE},)
-	hello-driver-m := hello-driver.o
-# Otherwise we were called directly from the command line.
-# Invoke the kernel build system.
+
+TARGET_MODULE:=hello-driver
+# If we are running by kernel building system
+ifneq ($(KERNELRELEASE),)
+	$(TARGET_MODULE)-objs := main.o device_file.o
+	obj-m := $(TARGET_MODULE).o
+# If we running without kernel build system
 else
-	KERNEL_SOURCE := /usr/src/linux-headers-4.19.0-5-amd64
-	PWD := $(shell pwd)
-default: ;
-	${MAKE} -C ${KERNEL_SOURCE} SUBDIRS=${PWD} modules
- 
-clean: ;
-	${MAKE} -C ${KERNEL_SOURCE} SUBDIRS=${PWD} clean
+	BUILDSYSTEM_DIR:=/lib/modules/$(shell uname -r)/build
+	PWD:=$(shell pwd)
+all :
+# run kernel build system to make module
+	$(MAKE) -C $(BUILDSYSTEM_DIR) M=$(PWD) modules
+clean:
+# run kernel build system to cleanup in current directory
+	$(MAKE) -C $(BUILDSYSTEM_DIR) M=$(PWD) clean
+load:
+	insmod ./$(TARGET_MODULE).ko
+unload:
+	rmmod ./$(TARGET_MODULE).ko
 endif
