Correct object file

--- a/hello-driver/Makefile
+++ b/hello-driver/Makefile
@@ -2,7 +2,7 @@
 TARGET_MODULE:=hello-driver
 # If we are running by kernel building system
 ifneq ($(KERNELRELEASE),)
-	$(TARGET_MODULE)-objs := main.o device_file.o
+	$(TARGET_MODULE)-objs := hello-driver.o
 	obj-m := $(TARGET_MODULE).o
 # If we running without kernel build system
 else
